tests222/tests2/test41.out
lli: <stdin>:1:1: error: expected top-level entity
line 3: byte value 100000 out of range
^
